# HyperSonicAnalyzer

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  README.md
.githooks/: pre-commit
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectralAnalyzer.cpp  SpectralAnalyzer.h
scripts/: lint.sh
